crates/plotnik-tests/tests/03-analyze/ref_resolution/undefined_reference_with_suggestion.txt
Expr = (identifier) @x
Q = (call_expression function: (Expl))
------------------ DIAGNOSTICS -------------------
error: `Expl` is not defined
 --> query.ptk:2:33
  |
2 | Q = (call_expression function: (Expl))
  |                                 ^^^^
  |
help: replace with the defined reference `(Expr)`
  |
2 - Q = (call_expression function: (Expl))
2 + Q = (call_expression function: (Expr))
  |
-------------------- SYMBOLS ---------------------
Expr
Q
  Expl?
